--- a/views/blog-editor.njk
+++ b/views/blog-editor.njk
@@ -10,12 +10,23 @@
             <h1>Blog Editor</h1>
             <p class="subtitle">Writing blog as <b>{{ author.name }}</b></p>
         </div>
+
+        <div class="image-upload">
+            <label for="coverUpload" class="upload-label">
+            <div class="upload-preview" id="uploadPreview">
+                <span class="upload-text">Click to upload blog thumbnail (< 50MB)</span>
+            </div>
+            <input type="file" id="coverUpload" accept="image/*" hidden>
+            </label>
+        </div>
+
         <div id="editorjs" class="editor-area"></div>
+
         <div class="editor-controls">
             <button id="saveBtn" class="btn-save">Publish</button>
         </div>
-        <pre id="output" class="editor-output"></pre>
     </div>
+
 {% endblock %}
 
 {% block scripts %}
@@ -26,6 +37,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/underline@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/slugify@1.6.6/slugify.min.js"></script>
     <script>
+        let thumbnailFile = null
         function Filter(blocks) {
             let _foundIndexes = null
             let _indexIdx = null
@@ -40,7 +52,6 @@
                 "idx",
                 "brd",
                 "pfp",
-                "thm"
             ]
             this.blog = blocks.map((block, i) => {
                 let data = block.data
@@ -114,6 +125,7 @@
                 return {type: block.type, data}
             }).filter(block => block)
         }
+
         const editor = new EditorJS({
             holder: 'editorjs',
             autofocus: true,
@@ -128,7 +140,7 @@
                     inlineToolbar: ['bold', 'italic', 'underline']
                 },
                 linkTool: LinkTool,
-                underline: Underline
+                underline: Underline,
             },
             data: {
                 blocks: [
@@ -149,12 +161,6 @@
                         type: "paragraph",
                         data: {
                             text: "-tag:#tag-1 #tag-2",
-                        }
-                    },
-                    {
-                        type: "paragraph",
-                        data: {
-                            text: "-thm:path-to-your-thumbnail.jpg",
                         }
                     },
                     {
@@ -224,7 +230,22 @@
                 ]
             },
         });
-        const outputEl = document.getElementById('output')
+
+        const coverInput = document.getElementById('coverUpload');
+        const preview = document.getElementById('uploadPreview');
+
+        coverInput.addEventListener('change', () => {
+            const file = coverInput.files[0];
+            thumbnailFile = file
+            if (!file) return;
+
+            const reader = new FileReader();
+            reader.onload = e => {
+                preview.innerHTML = `<img src="${e.target.result}" alt="Cover Image">`;
+            };
+            reader.readAsDataURL(file);
+        });
+        
         document.getElementById('saveBtn').addEventListener('click', async () => {
             try {
                 let savedData = await editor.save();
@@ -236,13 +257,14 @@
                         "text": new Date()
                     }
                 })
-                outputEl.textContent = JSON.stringify(filteredBlocks, null, 2);
+
+                const formData = new FormData()
+                formData.append("thumbnail", thumbnailFile)
+                formData.append("blog", JSON.stringify(filteredBlocks))
+
                 const response = await fetch("/admin/blog", {
                     method: "post",
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                    body: JSON.stringify(filteredBlocks)
+                    body: formData
                 })
                 if (response.ok) {
                     const data = await response.json()
