--- a/views/home.njk
+++ b/views/home.njk
@@ -20,7 +20,7 @@
 		<div class="copy flex-col-center">
 			<h1 class="headline">
 				A social platform designed for<br>
-				making you <em>smarter</em> and more creative
+				making you <i>smarter</i> and more creative
 			</h1>
 			<p class="tagline">
 				Simply put “Be where <em>Ideas</em> are”
