redirection to waitlist in login and try-now

--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -84,8 +84,8 @@
 				</nav>
 
 				<div class="auth-buttons flex-row-center">
-					<button class="header__btn login" onclick="window.location.href = 'http://app.noteroom.co/login'">Login</button>
-					<button class="header__btn create-account" onclick="window.location = 'http://app.noteroom.co/signup'">Try Now</button>
+					<button class="header__btn login" onclick="window.location.href = '/waitlist'">Login</button>
+					<button class="header__btn create-account" onclick="window.location = '/waitlist'">Try Now</button>
 					<button class="menu-toggle" id="menuToggle" aria-label="Toggle Menu" aria-expanded="false">☰</button>
 				</div>
 			</div>
@@ -97,7 +97,7 @@
 					<li><a href="/join-us">Join Team</a></li>
 					<li><a href="/blogs">Blog</a></li>
 					<li>
-						<button class="mobile-nav-signup-btn" onclick="window.location.href = 'http://app.noteroom.co/signup'">Try Now</button>
+						<button class="mobile-nav-signup-btn" onclick="window.location.href = '/waitlist'">Try Now</button>
 					</li>
 				</ul>
 			</div>
