redirected to waitlist in login links

--- a/views/home.njk
+++ b/views/home.njk
@@ -25,7 +25,7 @@
 			<p class="tagline">
 				Simply put “Be where <em>Ideas</em> are”
 			</p>
-			<button class="cta" onclick="window.location.href = 'http://app.noteroom.co/login'">
+			<button class="cta" onclick="window.location.href = '/waitlist'">
 				Try NoteRoom
 			</button>
 		</div>
