--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -130,7 +130,7 @@
 				<div class="clm">
 					<h3>Important Links</h3>
 					<ul>
-						<li><a href="http://app.noteroom.co/login">Login</a></li>
+						<li><a href="/waitlist">Login</a></li>
 						{# <li><a href="/user-guide">User Guide</a></li> #}
 						<li><a href="/about-us">About Us</a></li>
 					</ul>
@@ -139,7 +139,7 @@
 				<div class="clm">
 					<h3 class="sign-up-title">Not a Memeber Yet 😿?</h3>
 					<p>Jump in, share notes, and level up your study game with us!</p>
-					<div class="sign-up-btn" onclick="location.href='http://app.noteroom.co/login'">Join Now</div>
+					<div class="sign-up-btn" onclick="location.href='/waitlist'">Join Now</div>
 				</div>
 			</div>
 
