--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -58,8 +58,7 @@
 		<header class="header flex-col-center">
 			<div class="header__container-1 flex-row-center">
 				<div class="header__logo flex-row-center" onclick="window.location.href='/'">
-					<img src="{{ asset_path('NoteRoom-LogoMark-White-BG.jpg') }}" alt="NoteRoom Logo">
-					<span class="header__logo--subtitle">noteroom</span>
+					<img src="{{ asset_path('Rectangle Horizontal/NoteRoom_logo-fullcolor-rgb-2-1000_1000px.png') }}" alt="NoteRoom Logo">
 				</div>
 
 				<nav class="header__nav nav-pc" id="headerNav">
@@ -76,8 +75,8 @@
 							<p>Career</p>
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
 						</li>
-						<li>
-							<p onclick="window.location.href='/blogs'">Blog</p>
+						<li onclick="window.location.href='/blogs'">
+							<p>Blog</p>
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/></svg>
 						</li>
 					</ul>
