feat: add waitlist page bg effects

--- a/views/waitlist.njk
+++ b/views/waitlist.njk
@@ -24,6 +24,12 @@
 
             <p class="hide" id="status-message"></p>
         </div>
+        <div class="background-visuals">
+            <img src="{{ asset_path('NR-logomarks/NoteRoomLogoMark_logomark-fullcolor-rgb-1000_1000px.png') }}" alt="NoteRoom logo" class="blurred-logo" />
+            <div class="gradient-blob blob-1"></div>
+            <div class="gradient-blob blob-2"></div>
+        </div>
+
     </section>
 {% endblock %}
 
